set sequence generated number to process